--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Todo Crud Application!</title>
+    <title>EWB Newsletter Signup!</title>
 </head>
 
 <body>
@@ -20,8 +20,8 @@
             <div class="col-lg-8">
                 <form id="form">
                     <div class="form-group">
-                        <label for="todo">Todo</label>
-                        <input type="text" class="form-control" id="todoUserInput" placeholder="Todo">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="nameUserInput" placeholder="name">
                         <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </form>
@@ -53,48 +53,48 @@
         $(document).ready(() => {
             const display = $("#display");
             const form = $("#form");
-            const todoUserInput = $("#todoUserInput");
+            const nameUserInput = $("#nameUserInput");
 
-            const getTodos = ()=>{
-                fetch('/getTodos',{method: "get"}).then((response)=>{
+            const getnames = ()=>{
+                fetch('/getnames',{method: "get"}).then((response)=>{
                     return response.json();
                 }).then((data)=>{
                     console.log(data);
-                    displayTodos(data);
+                    displaynames(data);
                 });
             }
 
-            getTodos();
+            getnames();
 
-            const resetTodosInput = () => {
-                todoUserInput.val('');
+            const resetnamesInput = () => {
+                nameUserInput.val('');
             }
 
-            const editTodo = (todo, todoID, editID)=>{
+            const editname = (name, nameID, editID)=>{
                 let editBtn = $(`${editID}`);
                 editBtn.click(()=>{
-                    fetch(`/${todo._id}`,{
+                    fetch(`/${name._id}`,{
                         method: "put",
                         headers: {
                             "Content-Type" : "application/json; charset=utf-8"
                         },
-                        body: JSON.stringify({todo: todoUserInput.val()})
+                        body: JSON.stringify({name: nameUserInput.val()})
                     }).then((response)=>{
                         return response.json();
                     }).then((data)=>{
                         if (data.ok == 1) {
-                            let todoIndex = $(`#${todoID}`);
-                            todoIndex.html(data.value.todo);
-                            resetTodosInput();
+                            let nameIndex = $(`#${nameID}`);
+                            nameIndex.html(data.value.name);
+                            resetnamesInput();
                         }
                     })
                 })
             }
 
-            const deleteTodo = (todo, listItemID, deleteID)=>{
+            const deletename = (name, listItemID, deleteID)=>{
                 let deleteBtn = $(`#${deleteID}`);
                 deleteBtn.click(()=>{
-                    fetch(`/${todo._id}`,{
+                    fetch(`/${name._id}`,{
                         method: "delete"
                     }).then((response)=>{
                         return response.json();
@@ -106,19 +106,19 @@
                 });
             };
 
-            const buildIDS = (todo) => {
+            const buildIDS = (name) => {
                 return {
-                    editID: "edit" + todo._id,
-                    deleteID: "delete_" + todo._id,
-                    listItemID: "listItem_" + todo._id,
-                    todoId: "todo_" + todo._id
+                    editID: "edit" + name._id,
+                    deleteID: "delete_" + name._id,
+                    listItemID: "listItem_" + name._id,
+                    nameId: "name_" + name._id
                 }
             }
 
-            const buildTemplate = (todo, ids) => {
+            const buildTemplate = (name, ids) => {
                 return `<li class="list-group-item" id="${ids.listItemID}">
                         <div class="row" >
-                            <div class="col-md-4" id="${ids.todoID}">${todo.todo}</div>
+                            <div class="col-md-4" id="${ids.nameID}">${name.name}</div>
                             <div class="col-md-4"></div>
                             <div class="col-md-4 text-right">
                                 <button type="button" class="btn btn-secondary" id="${ids.editID}">Edit</button>
@@ -128,12 +128,12 @@
                     </li>`;
             }
 
-            const displayTodos = (data)=>{
-                data.forEach((todo)=>{
-                    let ids = buildIDS(todo);
-                    display.append(buildTemplate(todo, ids));
-                    editTodo(todo, ids.todoID, ids.editID);
-                    deleteTodo(todo, ids.listItemID, ids.deleteID)
+            const displaynames = (data)=>{
+                data.forEach((name)=>{
+                    let ids = buildIDS(name);
+                    display.append(buildTemplate(name, ids));
+                    editname(name, ids.nameID, ids.editID);
+                    deletename(name, ids.listItemID, ids.deleteID)
                 })
             }
 
@@ -141,7 +141,7 @@
                 e.preventDefault();
                 fetch('/',{
                     method: 'post',
-                    body: JSON.stringify({todo:todoUserInput.val()}),
+                    body: JSON.stringify({name:nameUserInput.val()}),
                     headers : {
                         "Content-Type" : "application/json; charset=utf-8"
                     }
@@ -151,10 +151,10 @@
                     if (data.result.ok == 1 && data.result.n == 1) {
                         let ids = buildIDS(data.document);
                         display.append(buildTemplate(data.document, ids));
-                        editTodo(data.document, ids.todoId, ids.editID);
-                        deleteTodo(data.document, ids.listItemID, ids.deleteID);
+                        editname(data.document, ids.nameId, ids.editID);
+                        deletename(data.document, ids.listItemID, ids.deleteID);
                     }
-                    resetTodosInput();
+                    resetnamesInput();
                 });
             })
         });
