--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@
             </div>
             <div class="col-lg-2"></div>
         </div>
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <ul id="display" class="list-group">
-                </ul>
-            </div>
-            <div class="col-lg-2"></div>
-        </div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -83,107 +75,29 @@
             const display = $("#display");
             const form = $("#form");
             const nameUserInput = $("#nameUserInput");
+            const emailUserInput = $("#emailUserInput");
 
-            const getnames = () => {
-                fetch('/getnames', { method: "get" }).then((response) => {
-                    return response.json();
-                }).then((data) => {
-                    console.log(data);
-                    displaynames(data);
-                });
-            }
-
-            getnames();
-
-            const resetnamesInput = () => {
+            const resetNameInput = () => {
                 nameUserInput.val('');
             }
 
-            const editname = (name, nameID, editID) => {
-                let editBtn = $(`${editID}`);
-                editBtn.click(() => {
-                    fetch(`/${name._id}`, {
-                        method: "put",
-                        headers: {
-                            "Content-Type": "application/json; charset=utf-8"
-                        },
-                        body: JSON.stringify({ name: nameUserInput.val() })
-                    }).then((response) => {
-                        return response.json();
-                    }).then((data) => {
-                        if (data.ok == 1) {
-                            let nameIndex = $(`#${nameID}`);
-                            nameIndex.html(data.value.name);
-                            resetnamesInput();
-                        }
-                    })
-                })
-            }
-
-            const deletename = (name, listItemID, deleteID) => {
-                let deleteBtn = $(`#${deleteID}`);
-                deleteBtn.click(() => {
-                    fetch(`/${name._id}`, {
-                        method: "delete"
-                    }).then((response) => {
-                        return response.json();
-                    }).then((data) => {
-                        if (data.ok == 1) {
-                            $(`#${listItemID}`).remove();
-                        }
-                    })
-                });
-            };
-
-            const buildIDS = (name) => {
-                return {
-                    editID: "edit" + name._id,
-                    deleteID: "delete_" + name._id,
-                    listItemID: "listItem_" + name._id,
-                    nameId: "name_" + name._id
-                }
-            }
-
-            const buildTemplate = (name, ids) => {
-                return `<li class="list-group-item" id="${ids.listItemID}">
-                        <div class="row" >
-                            <div class="col-md-4" id="${ids.nameID}">${name.name}</div>
-                            <div class="col-md-4"></div>
-                            <div class="col-md-4 text-right">
-                                <button type="button" class="btn btn-secondary" id="${ids.editID}">Edit</button>
-                                <button type="button" class="btn btn-danger" id="${ids.deleteID}">Delete</button>
-                            </div>
-                      </div >
-                    </li>`;
-            }
-
-            const displaynames = (data) => {
-                data.forEach((name) => {
-                    let ids = buildIDS(name);
-                    display.append(buildTemplate(name, ids));
-                    editname(name, ids.nameID, ids.editID);
-                    deletename(name, ids.listItemID, ids.deleteID)
-                })
+            const resetEmailInput = () => {
+                emailUserInput.val('');
             }
 
             form.submit((e) => {
                 e.preventDefault();
                 fetch('/', {
                     method: 'post',
-                    body: JSON.stringify({ name: nameUserInput.val() }),
+                    body: JSON.stringify({name: nameUserInput.val(), email: emailUserInput.val(), subscribed: true}),
                     headers: {
                         "Content-Type": "application/json; charset=utf-8"
                     }
                 }).then((response) => {
                     return response.json();
                 }).then((data) => {
-                    if (data.result.ok == 1 && data.result.n == 1) {
-                        let ids = buildIDS(data.document);
-                        display.append(buildTemplate(data.document, ids));
-                        editname(data.document, ids.nameId, ids.editID);
-                        deletename(data.document, ids.listItemID, ids.deleteID);
-                    }
-                    resetnamesInput();
+                    resetNameInput();
+                    resetEmailInput();
                 });
             })
         });
