--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>EWB Newsletter Signup!</title>
+    <title>Newsletter Signup!</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8" style="background-color:mediumseagreen; margin-top: 30px;">
-                <h1>EWB-ASU Newsletter Signup</h1>
+                <h1>Newsletter Signup</h1>
                 <form id="form">
                     <div class="form-group">
                         <label for="name">Name</label>
