Update to make it a generic customizable unsubscribe page

--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-8" style="background-color:mediumseagreen; margin-top: 30px;">
-                <h1>EWB-ASU Newsletter Unsubscribe</h1>
+                <h1>EUnsubscribe</h1>
                 <form id="form">
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -31,7 +31,7 @@
             </div>
             <h1 style="visibility: hidden; color:blue" id="completed">
                 You have been unsubscribed.
-                If you would like to sign up again, please go to ewbasu.org.
+                
             </h1>
             <div class="col-lg-2"></div>
         </div>
